--- a/src/component/timeline/index.scss
+++ b/src/component/timeline/index.scss
@@ -101,6 +101,7 @@
     text-align: right;
     margin-right: 50%;
     padding-right: 2rem;
+    transform: translateX(-2%); /* ✅ 중앙선 살짝 밀착 조정 */
   }
 
   /* 오른쪽 카드 */
@@ -109,6 +110,7 @@
     text-align: left;
     margin-left: 50%;
     padding-left: 2rem;
+    transform: translateX(2%); /* ✅ 중앙선 살짝 밀착 조정 */
   }
 
   /* ✅ 모바일에서도 좌우 교차 유지 */
@@ -116,6 +118,7 @@
     .timeline-gallery::before {
       width: 1px;
       background-color: rgba(201, 122, 126, 0.2);
+      z-index: 0;
     }
 
     .timeline-item {
@@ -132,6 +135,7 @@
         .circle-image {
           width: 100px;
           height: 100px;
+          margin-top: 1rem; /* ✅ 선에서 살짝 떨어뜨림 */
         }
 
         .timeline-text {
@@ -145,9 +149,9 @@
       }
 
       &::before {
-        top: 0;
+        top: 110px; /* ✅ 점을 사진 아래 중앙으로 보정 */
         left: 50%;
-        transform: translate(-50%, -20%);
+        transform: translateX(-50%);
       }
     }
   }
