--- a/src/component/timeline/index.scss
+++ b/src/component/timeline/index.scss
@@ -29,9 +29,10 @@
 
   .timeline-item {
     position: relative;
-    display: flex;
-    justify-content: center;
     width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
     margin: 3.5rem 0;
     z-index: 1;
 
@@ -39,7 +40,7 @@
     &::before {
       content: "";
       position: absolute;
-      top: 80px; /* 이미지 중간 높이 */
+      top: 60px;
       left: 50%;
       transform: translateX(-50%);
       width: 10px;
@@ -49,14 +50,14 @@
       z-index: 2;
     }
 
+    /* 왼쪽 / 오른쪽 컨텐츠 공통 */
     .content {
-      position: relative;
+      width: 45%;
+      max-width: 380px;
       display: flex;
       flex-direction: column;
       align-items: center;
       text-align: center;
-      width: 45%;
-      max-width: 360px;
     }
 
     .circle-image {
@@ -67,13 +68,11 @@
       background-color: #fff;
       box-shadow: 0 0 6px rgba(0, 0, 0, 0.05);
       margin-bottom: 0.8rem;
-      z-index: 1;
 
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
-        border-radius: 50%;
       }
     }
 
@@ -100,47 +99,45 @@
 
   /* 왼쪽 카드 */
   .timeline-item.left {
-    justify-content: flex-end;
-
     .content {
-      align-items: flex-end;
-      text-align: right;
-      margin-right: 50%;
-      padding-right: 2.5rem;
+      margin-right: auto;
+      margin-left: 0;
     }
   }
 
   /* 오른쪽 카드 */
   .timeline-item.right {
-    justify-content: flex-start;
-
+    flex-direction: row-reverse;
     .content {
-      align-items: flex-start;
-      text-align: left;
-      margin-left: 50%;
-      padding-left: 2.5rem;
+      margin-left: auto;
+      margin-right: 0;
     }
   }
 
-  /* ✅ 모바일에서도 동일한 모양 유지 */
+  /* ✅ 모바일: 동일한 중앙선, 좌우 교차 유지 */
   @media (max-width: 768px) {
+    .timeline-gallery::before {
+      left: 50%;
+      transform: translateX(-50%);
+      width: 1px;
+    }
+
     .timeline-item {
       flex-direction: column;
       align-items: center;
       margin: 3rem 0;
 
       &::before {
-        top: 80px;
+        top: 60px;
         left: 50%;
         transform: translateX(-50%);
       }
 
       .content {
         width: 80%;
-        margin: 0;
-        padding: 0;
-        align-items: center !important;
-        text-align: center !important;
+        margin: 0 auto;
+        text-align: center;
+        align-items: center;
       }
 
       .circle-image {
@@ -156,16 +153,6 @@
         .caption {
           font-size: 0.9rem;
         }
-      }
-    }
-
-    /* 모바일도 좌우 교차 유지 */
-    .timeline-item.left,
-    .timeline-item.right {
-      justify-content: center !important;
-      .content {
-        align-items: center !important;
-        text-align: center !important;
       }
     }
   }
