--- a/src/component/timeline/index.scss
+++ b/src/component/timeline/index.scss
@@ -8,7 +8,7 @@
   .timeline-gallery {
     position: relative;
     width: 100%;
-    max-width: 850px;
+    max-width: none;
     display: flex;
     flex-direction: column;
     align-items: center;
